# wwwzne

./: Cargo.toml  README.md  Taskfile.yml  build.rs  go.mod  main.go  wwwzne.config.json
shell/: r.cmd  runner.cmd  server.cmd  test.cmd  wwwzne.config.json
src/: main.rs  wwwzne.config.json
test/: wwwzne.config.json
