[package]
name = "wwwzne"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
colored = "3.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
[build-dependencies]
winres = "0.1"
[[bin]]
name = "wwwzne"
path = "src/main.rs"